# apl-examples

./: .gitignore  README.md
inferencing-service/: README.md  values.yaml
kserve-ai-inferencing/: Chart.yaml  README.md  values.yaml
kserve-ai-inferencing/charts/inferencing-service/: Chart.yaml  values.yaml
kserve-ai-inferencing/charts/inferencing-service/templates/: inference-service.yaml
kserve-ai-inferencing/charts/meta-llama-3-8b-instruct/: values.yaml
kserve-ai-inferencing/charts/meta-llama-3-8b-instruct/templates/: _helpers.tpl  lliama.yaml  security-policy.yaml
open-webui/: security-policy.yaml
rabbitmq-publisher-consumer/: README.md
rabbitmq-publisher-consumer/consumer/: rabbitmq.py
rabbitmq-publisher-consumer/publisher/: Dockerfile  index.html
rabbitmq-publisher-consumer/publisher/static/stylesheets/: app.css  login.css
rabbitmq-python/: README.md  pyproject.toml
rabbitmq-python-example/: Procfile  README.md
rabbitmq-python-example/static/: script.js  style.css
rabbitmq-python/assets/: index.html
rabbitmq-python/src/: main.py  notifier.py
spinkube-wasm/: README.md  annotate-nodes-policy.yaml
vote-app/: README.md
wordpress/: README.md
