[tool.poetry]
name = "rabbitmq-python-example"
version = "0.1.0"
description = ""
authors = ["Matthias Erll <merll@akamai.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
aio-pika = "^9.5.4"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
